src/markdown/snapshots/marcup__markdown__parser__tests__emphasis.snap
---
source: src/markdown/parser.rs
expression: content

---
{
  "type": "root",
  "children": [
    {
      "type": "paragraph",
      "children": [
        {
          "type": "text",
          "value": "*alpha*",
          "position": null
        }
      ],
      "position": null
    }
  ],
  "position": null
}
