src/markdown/snapshots/marcup__markdown__parser__tests__fenced_code_block_tilde.snap
---
source: src/markdown/parser.rs
expression: md.ok().unwrap().1

---
{
  "type": "root",
  "children": [
    {
      "type": "code",
      "lang": null,
      "meta": null,
      "value": "ls",
      "position": null
    }
  ],
  "position": null
}
