src/markdown/snapshots/marcup__markdown__parser__tests__header.snap
---
source: src/markdown/parser.rs
expression: content

---
{
  "type": "root",
  "children": [
    {
      "type": "heading",
      "depth": 1,
      "children": [
        {
          "type": "text",
          "value": "Header",
          "position": null
        }
      ],
      "setext": false,
      "position": null
    }
  ],
  "position": null
}
