src/markdown/snapshots/marcup__markdown__parser__tests__header_italicized.snap
---
source: src/markdown/parser.rs
expression: content

---
{
  "type": "root",
  "children": [
    {
      "type": "heading",
      "depth": 1,
      "children": [
        {
          "type": "emphasis",
          "children": [
            {
              "type": "text",
              "value": "Hello",
              "position": null
            }
          ],
          "position": null
        },
        {
          "type": "text",
          "value": " World",
          "position": null
        }
      ],
      "setext": false,
      "position": null
    }
  ],
  "position": null
}
