src/markdown/snapshots/marcup__markdown__parser__tests__indented_code_block_trailing_and_preceding_blank_lines.snap
---
source: src/markdown/parser.rs
expression: md.ok().unwrap().1

---
{
  "type": "root",
  "children": [
    {
      "type": "code",
      "lang": null,
      "meta": null,
      "value": "\nls\n",
      "position": null
    }
  ],
  "position": null
}
