src/markdown/snapshots/marcup__markdown__parser__tests__indented_code_block_with_indented_line.snap
---
source: src/markdown/parser.rs
expression: md.ok().unwrap().1

---
{
  "type": "root",
  "children": [
    {
      "type": "code",
      "lang": null,
      "meta": null,
      "value": "ls\n    foo",
      "position": null
    }
  ],
  "position": null
}
