src/markdown/snapshots/marcup__markdown__parser__tests__indented_tab_code_block.snap
---
source: src/markdown/parser.rs
expression: md.ok().unwrap().1

---
{
  "type": "root",
  "children": [
    {
      "type": "code",
      "lang": null,
      "meta": null,
      "value": "ls\nfoo",
      "position": null
    }
  ],
  "position": null
}
